[tool.poetry]
name = "gbh-dnd"
version = "0.1.0"
description = ""
authors = ["Alex Feat <af@game-brotherhood.club>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
pydantic = "1.10.7"
uvicorn = {version = "0.21.1", extras = ["standard"]}
alembic = "^1.10.3"
psycopg = {version = "3.1.8", extras = ["binary"]}
sqlalchemy = "2.0.20"
typer = "^0.12.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^4.0.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
